# juegecitos

./: .gitattributes  .gitignore  .gitmodules  TC0000.SWP  juegecitos.sln  urls.txt
BANA/: Juegecitos.sln  urls.md
BANA/Juegecitos.BANA/: Juegecitos.BANA.csproj  Program.cs  _Imports.razor
BANA/Juegecitos.BANA/Pages/: Index.razor  Pong.razor
BANA/Juegecitos.BANA/Properties/: launchSettings.json
BANA/Juegecitos.BANA/Shared/: NavMenu.razor
BANA/Juegecitos.BANA/wwwroot/: index.html  manifest.json
BANA/juegecitos/Juegecitos.BANA/: Juegecitos.BANA.csproj
Juegecitos.Shared/: Component1.razor  ExampleJsInterop.cs
JuegecitosHosted/Client/: JuegecitosHosted.Client.csproj  Program.cs  _Imports.razor
JuegecitosHosted/Client/Pages/: FetchData.razor
JuegecitosHosted/Client/Properties/: launchSettings.json
JuegecitosHosted/Client/Shared/: NavMenu.razor
JuegecitosHosted/Client/wwwroot/: index.html  manifest.json
JuegecitosHosted/Server/: JuegecitosHosted.Server.csproj
JuegecitosHosted/Server/Controllers/: WeatherForecastController.cs
JuegecitosHosted/Server/Pages/: Error.cshtml  Error.cshtml.cs
JuegecitosHosted/Server/Properties/: launchSettings.json
JuegecitosHosted/Shared/: WeatherForecast.cs
JuegecitosStatic/: JuegecitosStatic.csproj  Program.cs  _Imports.razor
JuegecitosStatic/Properties/: launchSettings.json
JuegecitosStatic/Shared/: NavMenu.razor
JuegecitosStatic/wwwroot/: index.html  manifest.json
PROYECTO/: JUEGECIT.IDE  SIMON.DSK  SIMON.PRJ  SIMON.~DE  juegecit.DSW  simon.DSW  simon.OBR
SRC/: RATON1.C  SIMON.C  SIMON.DSK  SIMON.PRJ
juegecitos/: CMakeLists.txt  Makefile  juegecitos.batch_build  juegecitos.cpp  juegecitos.sln  juegecitos.workspace  tags  wasm.mk
juegecitos.old/Juegecitos.Blazor/: Juegecitos.Blazor.csproj
juegecitos.old/Juegecitos.Blazor/Core/: Game.cs  GameObject2d.cs  GameObjectsCollection.cs  GameTime.cs  IAfterUpdate.cs  IHost.cs  ILoad.cs  ILoop.cs  IUpdateRender.cs  Transform2d.cs  VoidLoop.cs
juegecitos/Jetpac.Desktop/: Jetpac.Desktop.csproj  Program.cs  app.manifest
juegecitos/Jetpac.Shared/: Jetpac.Shared.projitems  Jetpac.Shared.shproj  JetpacGame.cs
juegecitos/Juegecitos.Blazor/: Juegecitos.Blazor.csproj  Program.cs  _Imports.razor
juegecitos/Juegecitos.Core/: Class1.cs
juegecitos/Juegecitos.JetPac/: Program.cs
juegecitos/box2d/: Makefile  ReadMe.txt  box2d.mk  box2d.project  box2d.vcxproj  box2d.vcxproj.filters  compile_flags.txt  stdafx.cpp  stdafx.h
juegecitos/core/: CMakeLists.txt  JGS_Game.cpp  JGS_game.h  JGS_params.h  Makefile  Makefile.win  compile_flags.txt  core.dev  core.layout  core.mk  core.project  core.vcxproj  core.vcxproj.filters  jgsApp.cpp  jgsGame.cpp  jgs_game.h  jgsapp.h  jgsbox2dscene.cpp  jgsbox2dscene.h  jgsgame.cpp  jgsgame.h  jgsgameassets.cpp  jgsgameassets.h  jgsgameobj.h  jgsinterface.h  jgsparams.h  jgsscene.cpp  jgsscene.h  jgsspriterrender.h  jgstexturegameassets.cpp  juegecitos.h  libcore.mk  pch.h  stdafx.h
juegecitos/jetpac/: -I.  CMakeLists.txt  JP_game.cpp  JP_game.h  Makefile  Makefile.win  compile_flags.txt  jetpac.dev  jetpac.html  jetpac.js  jetpac.layout  jetpac.mk  jetpac.project  jetpac.vcxproj  jetpac.vcxproj.filters  jetpac.wasm  jpGame.cpp  jpgame.cpp  jpgame.h  jpgameobjstype.h  jpitem.cpp  jpitem.h  jpjetman.cpp  jpjetman.h  jplevelobj.cpp  jplevelobj.h  jplevelscene.cpp  jplevelscene.h  jpplatform.cpp  jpplatform.h  pch.h  stdafx.cpp  stdafx.h
juegecitos/jetpac/jetpac/: ReadMe.txt  Resource.h  jetpac.cpp  jetpac.rc  jetpac.vcxproj  jetpac.vcxproj.filters  stdafx.cpp
juegecitos/juegecitos.Desktop/: Program.cs  app.manifest  juegecitos.Desktop.csproj
juegecitos/juegecitos.Shared/: juegecitos.Shared.projitems  juegecitos.Shared.shproj
unity3d/: .gitignore
unity3d/Juegecitos/: mono_crash.mem.19230.1.blob
(+169 files in other folders)
